[FIX] Notification z-index and color

--- a/src/Miit/FrontendBundle/Resources/sass/flex-it/master.scss
+++ b/src/Miit/FrontendBundle/Resources/sass/flex-it/master.scss
@@ -1030,7 +1030,8 @@ click-wave { 0% {
   position: fixed;
   right: 15px;
   top: 15px;
-  z-index: 999;
+  z-index: 99999;
+  color: #FFF;
 
   .notification-dialog {
     width: 350px;
